- Both numerical (NCBI-style) and non-numerical (UCSC-style) chromosome names 
  (1 vs. chr1) supported.
- Better integration into existing copy number pipelines.
- Automatic COSMIC annotation.
- Documentation improvements.


OTHER MAJOR ENHANCEMENTS

- More thorough initial grid search should minimize cases where purity/ploidy
  is wrong because the solution was not considered.
- More robust and accurate likelihood model that provides robust estimates of 
  minor segment copy numbers and more accurate LOH.  
- Support for SNVs outside the target interval file
  (remove.off.target.snvs=FALSE).   
- Improved segmentation and log-ratio normalization.  
- Support for non-human samples.
- Support for 100% pure samples (matched normal mode only).
- Faster SNV fitting.
- Experimental support for correcting non-reference mapping bias.


API CHANGES

- New functions: autoCurateResults, bootstrapResults, 
    calculateBamCoverageByInterval, calculateGCContentByInterval,
    calculateLogRatio, calculatePowerDetectSomatic, callAlterations, 
    callAlterationsFromSegmentation, callLOH, filterTargets, getDiploid, 
    getSexFromVcf, setMappingBiasVcf
- Deprecated functions: segmentationPSCBS
- Renamed functions: createExonWeightFile to createTargetWeights
- Renamed function arguments: 
    exon.weight.file to target.weight.file
    gatk.normal.file to normal.coverage.file
    gatk.tumor.file to tumor.coverage.file
    coverage.cutoff to min.coverage


OTHER NEW FEATURES

- Functions to calculate power to detect mono-clonal and sub-clonal somatic
  mutations (Carter et al., Nature Biotech, 2012) were added.


PLANNED FEATURES FOR PURECN 1.4 (BIOCONDUCTOR 3.5)

- Support for indels.
- Better runtime performance by ignoring unlikely solutions early.  
- Better support for known, small deletions and amplifications (e.g. EGFRvIII,
  MYC)
- Better support for pool of normals.
- Switch to S4 data structures (maybe).
- Whole dataset visualizations (maybe).